--- a/index.html
+++ b/index.html
@@ -12,6 +12,20 @@
     <h1 class="page-title"> Taskinator</h1>
     <p>Click the button below to add a new task!</p>
     <button class="btn">Add Task</button>
+
+    <main class="page-content">
+      <section class="task-list-wrapper">
+        <h2 class="list-title">Task To Do</h2>
+        <ul class="task-list">
+          <li class="task-item"> Task going to be added soon</li>
+        </ul>
+      </section>
+    </main>
+
+    <footer>
+      &copy;2023 by Taskinator
+
+    </footer>
   </header>
   
 
