--- a/index.html
+++ b/index.html
@@ -33,9 +33,20 @@
   </header>
 
   <main class="page-content">
+    <!--Task To Do-->
     <section class="task-list-wrapper">
       <h2 class="list-title">Tasks To Do</h2>
       <ul class="task-list" id="tasks-to-do"></ul>
+    </section>
+    <!--Task in progress-->
+    <section class="task-list-wrapper">
+      <h2 class="list-title">Task in progress</h2>
+      <ul class="task-list" id="tasks-in-progress"></ul>
+    </section>
+    <!--Task Completed-->
+    <section class="task-list-wrapper">
+      <h2 class="list-title">Task Completed</h2>
+      <ul class="task-list" id="tasks-completed"></ul>
     </section>
   </main>
 
